--- a/example/src/example.less
+++ b/example/src/example.less
@@ -3,6 +3,8 @@
 // -------------------
 */
 
+@import "../../less/component.less";
+
 body {
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 	font-size: 14px;
